project(ntv2recorddpx)

message("added ntv2recorddpx")

set(NTV2RECORDDPX_TARGET_INCLUDE_DIRS
	${AJA_LIBRARIES_ROOT}
	${AJA_APPS_ROOT}/crossplatform/demoapps
	${AJA_LIB_NTV2_ROOT}/includes
	${AJA_LIB_RETAIL_ROOT}/includes
	${AJA_LIB_RETAIL_ROOT}/services)

set(NTV2RECORDDPX_HEADERS
	ntv2recorddpx.h)
set(NTV2RECORDDPX_SOURCES
	ntv2recorddpx.cpp)

set(DEMO_APPS_SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/../ntv2democommon.cpp)
set(DEMO_APPS_HEADERS
	${CMAKE_CURRENT_SOURCE_DIR}/../ntv2democommon.h)

if (CMAKE_SYSTEM_NAME STREQUAL "Windows")
	# noop
elseif (CMAKE_SYSTEM_NAME STREQUAL "Darwin")
	find_library(FOUNDATION_FRAMEWORK Foundation)
	set(TARGET_LINK_LIBS ${FOUNDATION_FRAMEWORK})
elseif (CMAKE_SYSTEM_NAME STREQUAL "Linux")
	set(TARGET_LINK_LIBS dl pthread rt)
endif()

set(NTV2RECORDDPX_TARGET_SOURCES
	${NTV2RECORDDPX_SOURCES}
	${NTV2RECORDDPX_HEADERS}
	${DEMO_APPS_SOURCES}
	${DEMO_APPS_HEADERS})

add_executable(ntv2recorddpx ${NTV2RECORDDPX_TARGET_SOURCES})
add_dependencies(ntv2recorddpx ajantv2)
target_include_directories(ntv2recorddpx PUBLIC ${NTV2RECORDDPX_TARGET_INCLUDE_DIRS})
target_link_libraries(ntv2recorddpx PUBLIC ajantv2 ${TARGET_LINK_LIBS})

install(TARGETS ntv2recorddpx
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	FRAMEWORK DESTINATION ${CMAKE_INSTALL_PREFIX})
